glx/tests/invalid/repository-missing-name.glx
# Invalid: Missing required 'name' field
repositories:
  repository-12345678:
    version: "1.0"
    type: library
